# Oasis-Crypto-Trading

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/trading-engine/: main.py
libs/infrastructure/cache/: redis_client.py
libs/infrastructure/database/: connection.py
libs/infrastructure/messaging/: kafka_consumer.py  kafka_producer.py
libs/shared/config/: base.py
libs/shared/exceptions/: base.py
libs/shared/logging/: config.py
tools/scripts/: generate_secrets.py  setup_dev.sh  validate_system.py
tools/testing/utils/: base.py
